welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: too many arguments for method faireMotif: ()Unit
  faireMotif(3)
            ^