welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {for (compteur <- 1 to 3 ){
  faireMotif(3)
  recule(18)
}}
def faireMotif(){
  for (compteur <- 1 to 4){
    faireV()
   
  }
  avance(5)
}
def brosse(){
  baisseBrosse()
  leveBrosse()
}
def faireV(){
  avance(2)
  brosse()
  avance()
  gauche()
  avance()
  brosse()
  recule()
  droite()
  avance()
  brosse()
  avance(2)
  gauche()
}